charon/tests/ui/simple/gat-check-binder-levels.out
error: Generic associated types are not supported
 --> tests/ui/simple/gat-check-binder-levels.rs:7:5
  |
7 |     type Type<U>: Link<T>;
  |     ^^^^^^^^^^^^^^^^^^^^^

error: Item `test_crate::Trait` caused errors; ignoring.
 --> tests/ui/simple/gat-check-binder-levels.rs:6:1
  |
6 | pub trait Trait<T> {
  | ^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (2 errors)
